--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "primeflex": "^3.3.1",
     "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
